Fix a scrolling bug with overflowed decorations #18

--- a/themes/alpha/static/css/utilities.css
+++ b/themes/alpha/static/css/utilities.css
@@ -125,3 +125,9 @@
   white-space: nowrap; /* added line */
   border: 0;
 }
+
+/* Hide overflow on the left and right of an element */
+
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
